<resources>
    <string name="app_name">I\'dLikeToSee</string>

    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation Header</string>

    <string name="first_action_menu_main">What action do you want?</string>

    <string name="home_screen">I would like to see</string>
    <string name="movie_selection_screen">Movie selection</string>
    <string name="flo_action_btn_desc">TODO</string>

    <string name="movie_name">Movie name</string>
    <string name="movie_desc">Movie description</string>
    <string name="movie_genre">Movie genres</string>
    <string name="movie_duration">Movie duration</string>
    <string name="movie_rating">Movie rating</string>
    <string name="movie_release_date">Movie release date</string>
    <string name="movie_budget">Movie budget</string>
    <string name="movie_revenue">Movie revenue</string>
    <string name="movie_announcement">Movie announcement</string>

</resources>