<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackground"
    android:orientation="vertical"
    tools:context=".ui.screens.movieCard.MovieCardFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_full_image"
        android:layout_width="@dimen/movie_full_image_width"
        android:layout_height="@dimen/movie_full_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_full_image">

        <LinearLayout
            android:id="@+id/movie_bar_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_view_padding"
            android:textSize="@dimen/movie_bar_info_text_size"
            android:orientation="vertical"
            app:layoutManager="LinearLayoutManager">
            <!--  TODO app:layoutManager="LinearLayoutManager"  А надо ли указывать?  -->

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_info_margin"
                android:layout_marginTop="@dimen/movie_info_margin"
                android:layout_marginEnd="@dimen/movie_info_margin"
                android:text="@string/movie_name"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_info_margin"
                android:layout_marginTop="@dimen/movie_info_margin"
                android:layout_marginEnd="@dimen/movie_info_margin"
                android:text="@string/movie_desc"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/movie_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_info_margin"
                android:layout_marginTop="@dimen/movie_info_margin"
                android:layout_marginEnd="@dimen/movie_info_margin"
                android:text="@string/movie_genre"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/movie_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_info_margin"
                android:layout_marginTop="@dimen/movie_info_margin"
                android:layout_marginEnd="@dimen/movie_info_margin"
                android:text="@string/movie_duration"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_info_margin"
                android:layout_marginTop="@dimen/movie_info_margin"
                android:layout_marginEnd="@dimen/movie_info_margin"
                android:text="@string/movie_rating"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_info_margin"
                android:layout_marginTop="@dimen/movie_info_margin"
                android:layout_marginEnd="@dimen/movie_info_margin"
                android:text="@string/movie_release_date"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/movie_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_info_margin"
                android:layout_marginTop="@dimen/movie_info_margin"
                android:layout_marginEnd="@dimen/movie_info_margin"
                android:text="@string/movie_budget"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/movie_revenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_info_margin"
                android:layout_marginTop="@dimen/movie_info_margin"
                android:layout_marginEnd="@dimen/movie_info_margin"
                android:text="@string/movie_revenue"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/movie_announcement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_info_margin"
                android:layout_marginTop="@dimen/movie_info_margin"
                android:layout_marginEnd="@dimen/movie_info_margin"
                android:text="@string/movie_announcement"
                android:textAlignment="center" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>